--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,14 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: Amazon
-
+  celery:
+    image: celery:4.0.2
+    container_name: celery-server
+    build: .
+    volumes:
+      - .:/app
+    command: celery -A project worker -l INFO
+    depends_on:
+      - backend
 volumes:
   postgres_data: 
